crates/buff-lang-codegen-rust/tests/snapshots/protobuf_codegen__protobuf_codegen_deserialize_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/protobuf_codegen.rs
assertion_line: 744
expression: src
---
fn f() {
    buff_protobuf::deserialize(&bytes).unwrap_or_default();
}
