crates/buff-lang-codegen-rust/tests/snapshots/protobuf_codegen__protobuf_codegen_message_byte_size_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/protobuf_codegen.rs
assertion_line: 768
expression: src
---
fn f() {
    msg.byte_size;
}
