crates/buff-lang-codegen-rust/tests/snapshots/protobuf_codegen__protobuf_codegen_message_encode_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/protobuf_codegen.rs
assertion_line: 786
expression: src
---
fn f() {
    msg.encode;
}
