crates/buff-lang-codegen-rust/tests/snapshots/protobuf_codegen__protobuf_codegen_message_new_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/protobuf_codegen.rs
assertion_line: 762
expression: src
---
fn f() {
    buff_protobuf::Message::new(&value).unwrap_or_default();
}
