crates/buff-lang-codegen-rust/tests/snapshots/protobuf_codegen__protobuf_codegen_message_type_url_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/protobuf_codegen.rs
assertion_line: 774
expression: src
---
fn f() {
    msg.type_url;
}
