crates/buff-lang-codegen-rust/tests/snapshots/protobuf_codegen__protobuf_codegen_roundtrip_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/protobuf_codegen.rs
assertion_line: 753
expression: src
---
fn f() {
    buff_protobuf::roundtrip(&value);
}
