crates/buff-lang-codegen-rust/tests/snapshots/protobuf_codegen__protobuf_codegen_serialize_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/protobuf_codegen.rs
assertion_line: 735
expression: src
---
fn f() {
    buff_protobuf::serialize(&"hello".to_string()).unwrap_or_default();
}
